--- a/settings.gradle
+++ b/settings.gradle
@@ -1,14 +1,13 @@
 pluginManagement {
 	repositories {
-		mavenCentral()
 		gradlePluginPortal()
-		maven { url 'https://repo.spring.io/release' }
+		mavenCentral()
 	}
 }
 
 plugins {
 	id 'com.gradle.enterprise' version '3.17.5'
-	id 'io.spring.ge.conventions' version '0.0.17'
+	id 'io.spring.develocity.conventions' version '0.0.19'
 }
 
 rootProject.name = 'spring-kafka-dist'
