--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=3.2.2
+version=3.2.3-SNAPSHOT
 org.gradle.jvmargs=-Xmx1536M -Dfile.encoding=UTF-8
 org.gradle.caching=true
 org.gradle.parallel=true
