--- a/build.gradle
+++ b/build.gradle
@@ -58,20 +58,20 @@ ext {
 	jacksonBomVersion = '2.17.2'
 	jaywayJsonPathVersion = '2.9.0'
 	junit4Version = '4.13.2'
-	junitJupiterVersion = '5.10.3'
+	junitJupiterVersion = '5.11.0-M2'
 	kafkaVersion = '3.7.1'
 	kotlinCoroutinesVersion = '1.8.1'
 	log4jVersion = '2.23.1'
 	micrometerDocsVersion = '1.0.3'
-	micrometerVersion = '1.13.2'
-	micrometerTracingVersion = '1.3.2'
-	mockitoVersion = '5.10.0'
-	reactorVersion = '2023.0.8'
+	micrometerVersion = '1.14.0-M1'
+	micrometerTracingVersion = '1.4.0-M1'
+	mockitoVersion = '5.12.0'
+	reactorVersion = '2024.0.0-M4'
 	scalaVersion = '2.13'
-	springBootVersion = '3.2.7' // docs module
+	springBootVersion = '3.3.1' // docs module
 	springDataVersion = '2024.0.2'
 	springRetryVersion = '2.0.7'
-	springVersion = '6.2.0-SNAPSHOT'
+	springVersion = '6.2.0-M5'
 	zookeeperVersion = '3.8.4'
 
 	idPrefix = 'kafka'
